--- a/unit2Assessment.css
+++ b/unit2Assessment.css
@@ -15,8 +15,12 @@ header {
   width: 70%;
 }
 
+h1 {
+
+}
+
 main {
-  //content in column
+  /*content in column*/
   justify-content: left;
   width: 60%;
 }
@@ -25,6 +29,10 @@ main {
   //does this inherit the header section's 150px height or do you need to
     //name it directly?
   height: inherit;
+}
+
+#selectedMovieInfoSection {
+  
 }
 
 #userReview {
