--- a/unit2Assessment.css
+++ b/unit2Assessment.css
@@ -1,38 +1,45 @@
 body {
+  align-content: center;
   background-color: lavender;
   display: grid;
   font-family: monospace;
-  //you need to arrange everything in a column, centered width-wise
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 1fr 2fr 1fr;
+}
+
+form {
+  display: none;
 }
 
 header {
-  //what do you need to have logo come up horizontally to left of h1 tag
-  align-content: center;    //img, h1 text should be in the center of the div
   background-color: skyblue;
+  grid-column: 1 / 3;
   height: 150px;
   margin-bottom: 30px;
   padding: 10px 10px 10px 10px;
   width: 70%;
 }
 
-h1 {
-
-}
-
 main {
-  /*content in column*/
-  justify-content: left;
-  width: 60%;
+  /* width: 60%; */
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
 }
 
 #ghibliLogo {
-  //does this inherit the header section's 150px height or do you need to
-    //name it directly?
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
   height: inherit;
 }
 
+#pageHeader {
+  float: right;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
 #selectedMovieInfoSection {
-  
+
 }
 
 #userReview {
