movie reviews showing title not in bold

--- a/ghibli.css
+++ b/ghibli.css
@@ -1,14 +1,16 @@
 body {
     background-color: lavender;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 10% 80% 10%;
 }
 .header {
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: 150px;
     width: 70%;
     background-color: skyblue;
-    margin: 30px;
+    margin: 30px auto;
     padding-bottom: 10px;
     grid-column: 2 /4;
 }
@@ -26,9 +28,13 @@ body {
 .main {
     font-family: "Courier New", Courier, monospace;
     width: 60%;
-    margin: 30px;
+    margin: auto;
     padding-bottom: 10px;
     grid-column: 2 /4;
     grid-row: 2 /3;
 }
 
+#error {
+    color: red;
+    font-style: italic;
+}
