--- a/index.css
+++ b/index.css
@@ -31,8 +31,67 @@ img {
     width: 400px;
 }
 
-
-/* li::before {
-    content: url();
+li::before {
+    content: attr(id);
     font-weight: bold;
-} */
+}
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: x-large;
+    }
+
+    #header{
+        width: 100%;
+        height: inherit;
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    #main-container {
+        width: 95%;
+    }
+  }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+      body {
+          font-size: xx-large; 
+      }
+
+      #header {
+          width: 100%;
+          height: inherit;
+      }
+
+      #main-container {
+          width: 100%;
+          font-size: xx-large;
+      }
+
+      #text-box {
+          width: 100%;
+          height: 50px;
+          font-size: xx-large;
+      }
+
+      select {
+          font-size: large;
+          width: 400px;
+          height: 100px;
+          margin-bottom: 20px;
+          background-image: linear-gradient(gray, lightgray)
+      }
+
+      button {
+          width: 300px;
+          height: 75px;
+          font-size: xx-large;
+          background-color: white;
+          border-radius: 20px;
+          border: 5px solid yellow;
+          margin-top: 20px;
+      }
+}
+
