--- a/index.css
+++ b/index.css
@@ -79,9 +79,11 @@ li::before {
       select {
           font-size: large;
           width: 400px;
-          height: 100px;
+          height: 75px;
           margin-bottom: 20px;
-          background-image: linear-gradient(gray, lightgray)
+          background-image: linear-gradient(lightgray, white);
+          border: 5px solid gray;
+          border-radius: 20px;
       }
 
       button {
@@ -95,3 +97,47 @@ li::before {
       }
 }
 
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    body {
+        font-size: xx-large; 
+    }
+
+    #header {
+        width: 100%;
+        height: inherit;
+    }
+
+    #main-container {
+        width: 100%;
+        font-size: xx-large;
+    }
+
+    #text-box {
+        width: 100%;
+        height: 50px;
+        font-size: xx-large;
+    }
+
+    select {
+        font-size: large;
+        width: 400px;
+        height: 75px;
+        margin-bottom: 20px;
+        background-image: linear-gradient(lightgray, white);
+        border-radius: 20px;
+        border: 5px solid gray;
+    }
+
+    button {
+        width: 300px;
+        height: 75px;
+        font-size: xx-large;
+        background-color: white;
+        border-radius: 20px;
+        border: 5px solid yellow;
+        margin-top: 20px;
+    }
+}
