--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ li::before {
 }
 @media only screen and (max-width: 600px) {
     body {
-        font-size: x-large;
+        font-size: large;
     }
 
     #header{
