--- a/ghib.css
+++ b/ghib.css
@@ -1,12 +1,48 @@
-body {
-    /* background-color: rgb(165, 150, 165); */
+body{
+    background-color: lavender;
+    display: grid;
+    grid-template-columns: 50%;
+    justify-content: center;
 }
 
-select {
-    width: 150px;
-    margin: 10px;
+.header{
+    width: 70%;
+    height: 150px;
+    margin-bottom: 30px;
+    padding: 10px;
+    background-color: skyblue;
+    background-size: inherit;
+    display: table;
+
+
 }
-select:focus {
-    min-width: 150px;
-    width: auto;
+img{
+    height: inherit;
+    vertical-align: middle;
+    display: table-cell;
+    width: 55%;
+
+}
+h1{
+    vertical-align: middle;
+    display: table-cell;
+    text-align: justify;
+}
+
+.mainArea{
+    width: 60%;
+    justify-content: left;
 } 
+    
+
+
+form {
+    display: inline;
+}
+#text {
+    display: inline;
+    width: 400px
+}
+#submit {
+    display: inline;
+}
