--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: lavender;
-    font-family: 'Courier New', Courier, monospace;
-    
+    font-family: 'Courier New', Courier, monospace;   
 }
 #header {
     width: 70%;
@@ -18,32 +17,34 @@ body {
     margin-bottom: 30px;
     padding: 10px;
 }
-img{
-    height: 150px;
-}
 #main_content {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
+img{
+    height: 150px;
+}
 input {
     width: 400px;
+}
+#header_title {
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
 input, select, button {
     font-family: 'Courier New', Courier, monospace;
 }
 
 @media screen and (max-width: 850px) {
-    body {
-        width: 100%;
-    }
     #header {
         width: 90%;
     }
     #main_content {
         width: 75%;
     }
-    h1{
+    h1 {
         padding-right: 15px;
     }
 }
@@ -54,13 +55,17 @@ input, select, button {
         display: flex;
         flex-flow: column;
     }
-    img{
-        height: auto;
-        max-width: 100%;
-    }
     #main_content {
         width: 95%;
     }
+    #header_title {
+        justify-content: start;
+    }
+    img {
+        height: auto;
+        max-width: 100%;
+    }
+    
     input, select {
         width: 95%;
     }
