--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ div#mainstage {
 
   width: 60%;
   margin: 0 auto;
-  padding-bottom: 20px;
 
   text-align: left;
 }
@@ -83,6 +82,16 @@ div#selectrow {
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
+}
+
+select#filmselect, form#reviewform input[type="submit"] {
+  border: 2px outset;
+  background-color: rgb(248, 248, 248);
+  border-radius: 5px;
+}
+
+::placeholder {
+  color: darkgoldenrod;
 }
 
 select#filmselect {
@@ -109,7 +118,7 @@ form#reviewform {
   margin-bottom: 17px;
 }
 
-form#reviewform > input[type="text"] {
+form#reviewform input#newreview {
   display: block;
   margin: 5px 0;
   padding-left: 5px;
@@ -118,6 +127,10 @@ form#reviewform > input[type="text"] {
 
   border: 2px inset #fff; 
   background: rgba(255,255,255,0.7);
+}
+
+form#reviewform input#revtitle {
+  display: none;
 }
 
 div#subtext {
@@ -155,7 +168,95 @@ li strong {
 }
 
 div#footer {
-  padding: 6px 22px;
+  padding: 6px 11px;
+  width: 55%;
+  margin: 0 auto;
+  border-top: solid 1px #444;
 
   font-size: 0.8em;
+}
+
+
+
+@media (max-width: 799px) {
+  div#base-grid {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  div#header {
+    background-image: url("./logoSG.png");
+    background-repeat: no-repeat;
+    background-size: 45vw auto;
+    background-position: center 94%;
+
+    height: 150px;
+    width: 92%;
+    margin-top: 3px;
+    margin-bottom: 8px;
+  }
+
+  h1 {
+    height: inherit;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin: 0 auto;
+    font-size: 2.65em;
+    color: white;
+    text-align: center;
+  }
+
+  div#header > img {
+    display: none;
+  }
+
+  select#filmselect, form#reviewform input[type="submit"] {
+    margin-top: -1px;
+    border: 2px outset;
+    background-color: rgb(248, 248, 248);
+    border-radius: 5px;
+  }
+
+  div#mainstage {
+    width: 93%;
+    line-height: 1.5em;
+  }
+
+  h3 {
+    font-size: 1.7em;
+    font-style: italic;
+  }
+
+  h3 + p {
+    color: #666;
+    margin-block-start: 0em;
+    margin-block-end: 1em;
+  }
+
+  p + p {
+    margin-block-start: 1em;
+  }
+
+  form#reviewform {
+    padding-bottom: 7px;
+  }
+
+  form#reviewform > input[type="text"] {
+    width: 95%;
+  }
+
+  ul {
+    padding-inline-start: 0;
+    padding-inline-end: 0;
+  }
+
+  div#footer {
+    margin-top: auto;
+    padding: 6px 31px;
+    width: 74%;
+    border-top: solid 1px #444;
+  }
 }
