--- a/index.css
+++ b/index.css
@@ -9,7 +9,10 @@ body {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    /* background-image: url("Studio_Ghibli_logo.svg.png"); */
+    /* background-image: url("Studio_Ghibli_logo.svg.png");
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position: bottom right; */
     background-color: lavender;
     font-family: sans-serif;
     position: relative;
