--- a/movie-app.css
+++ b/movie-app.css
@@ -1,17 +1,43 @@
 body {
-    background-color: lavender;
-    text-align: center;
-    background-image:
+    background-color: lavender; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #header {
+    align-items: center;
+    margin-top: 0px;
+    width: 900px;
+    height: 150px;
     background-color: skyblue;
-    height: 200px;
-    /* background-image: url(https://i.pinimg.com/originals/03/51/71/0351711fe834c3a96656f65b4c54b2b2.jpg);     */
+    background-image: url("http://s3.amazonaws.com/quietus_production/images/articles/15955/studio_ghibli_logo_1407504562_crop_550x343.jpeg");
+    background-repeat: no-repeat;
+    background-size: 400px;
+    background-position: left;
+}
+#header > h1 {
+    position: fixed;
+    right: 400px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#select-movie {
+    width: 200px;
+    margin: 1em;
 }
 
-#mainDiv {
-    display: grid;
-    justify-content: left;
-    margin: 30px;
+#write-review {
+    width: 400px;
+}
+#main-area {
+    padding:10px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    /* text-align: center; */
+}
+
+#main-area > p {
+    width: 60%;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
