--- a/studioGhibliApi.css
+++ b/studioGhibliApi.css
@@ -3,7 +3,7 @@ body {
     background-color: lavender;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center
 }
 
@@ -16,53 +16,39 @@ img {
     display: flex;
     flex-direction: row;
     position: relative;
+    justify-content: space-between;
     width: 80%;
     background-color: #85cee9;
 }
 
 #headingDiv {
     display: grid;
-    /* justify-content: center; */
     align-items: center;
     position: relative;
-    left: 450px;
 }
 
-#movieTicket {
+.mainData {
     width: 60%;
-}
-
-#container {
-    width: 60%;
+    margin: 0 auto;
     display: flex;
-    align-items: flex-start;
+    /* align-items: flex-start; */
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 #textField {
     width: 400px;
     position: relative;
-    right: 157.9px;
-}
-
-ul {
-    position: relative;
-    right: 300px;
 }
 
 #submit {
-    position: relative;
-    right: 150px;
-}
-
-h3 {
-    font-weight: bold;
+    height: 20px;
+    border-radius: 5%;
+    border: 1px solid black;
 }
 
 select {
-    position: relative;
-    right: 330px;
+    width: 20%;
 }
 
 @media screen and (min-width: 1000px) {
