--- a/studioGhibliApi.css
+++ b/studioGhibliApi.css
@@ -15,23 +15,16 @@ img {
 #headingContainer {
     display: flex;
     flex-direction: row;
-    position: relative;
     justify-content: space-between;
     width: 80%;
     background-color: #85cee9;
-}
-
-#headingDiv {
-    display: grid;
     align-items: center;
-    position: relative;
 }
 
 .mainData {
     width: 60%;
     margin: 0 auto;
     display: flex;
-    /* align-items: flex-start; */
     flex-direction: column;
     justify-content: flex-start;
 }
@@ -51,8 +44,22 @@ select {
     width: 20%;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (max-width: 800px) {
     body {
         width: 100%
     }
+
+    #headingContainer {
+        display: inline-block;
+        align-items: center;
+    }
+
+    img {
+        height: 30%;
+    }
+
+    #textField {
+        width: 50%;
+    }
+
 }
