--- a/movieApp.css
+++ b/movieApp.css
@@ -1,6 +1,9 @@
 @media only screen and (max-width: 600px) {
+   body{
+       width:100%;
+   }
     #header{
-        
+        width:90%;
     }
 }
 
@@ -36,7 +39,7 @@ body{
 }
 
 
-#review{
+input{
     width: 400px;
 }
 
