--- a/movie-app.css
+++ b/movie-app.css
@@ -3,24 +3,27 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    font-family: sans-serif;
+    width: 100%;
+    margin: 0 auto;
 }
 
 #header {
-    align-items: center;
     margin-top: 0px;
-    width: 900px;
+    width: 70% ;
     height: 150px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     background-color: skyblue;
-    background-image: url("http://s3.amazonaws.com/quietus_production/images/articles/15955/studio_ghibli_logo_1407504562_crop_550x343.jpeg");
-    background-repeat: no-repeat;
-    background-size: 400px;
-    background-position: left;
 }
-#header > h1 {
-    position: fixed;
-    right: 400px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+img {
+    height: 100%;
 }
+
 #select-movie {
     width: 200px;
     margin: 1em;
@@ -29,15 +32,39 @@ body {
 #write-review {
     width: 400px;
 }
-#main-area {
-    padding:10px;
-    width: 60%;
-    display: flex;
+#movie-div{
+    width: 100%;
+    display:flex;
     flex-direction: column;
-    /* text-align: center; */
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#main-content {
+    padding:10px;
+    width: 70%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
+    
+}
+
+.main-area {
+    width: 70%;
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;    
 }
 
 #main-area > p {
-    width: 60%;
+    /* width: 60%; */
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#randomize-movie {
+    position: relative;
+    left: 215px;
+    bottom: 28px;
 }
