--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ div#footer {
 
 
 
-@media (max-width: 799px) {
+@media screen and (max-width: 799px) {
   div#base-grid {
     display: flex;
     flex-direction: column;
