--- a/assessment.css
+++ b/assessment.css
@@ -1,38 +1,64 @@
 body {
+    font-family: monospace;
     background-color: lavender;
-   
-    width: 100vh;
-   
+    width: 70%;
+    margin: 0 auto;
+}
+.top {
+    display: flex;
+    /* grid-template-columns:50% 50%;
+    grid-template-rows: auto; */
+    margin: 0 auto;
+     justify-content:space-between;
+    align-items: center;
+     width: 70%;
+    height: 150px;
+    background-color: skyblue;
+}
+
+#titleBox {
+    margin: 10px;
 }
 
 h1 {
-    width: 70%;
-    height: 150px
-}
-
-.top {
-    display: grid;
-    grid-template-columns:50% 50%;
-    grid-template-rows: auto;
-    justify-items: center;
-    align-items: center;
-     width: 100%;
-    height: 150px;
+    
     margin-bottom: 30px;
     margin-left: 10px;
     margin-right: 10px;
-    background-color: skyblue;
+    padding: 10px;
+    font-size: 20px;
 }
 
 
 img {
-    display: block;
+    display: inline;
     height: 100px;
-    
-    
-  
 }
 
+
+.select {
+    width: 60%;
+    margin: 0 auto;
+
+}
+
+.text-input {
+    width: 400px;
+    margin: 0 auto;
+    display: flex;
+    align-content: center;
+}
+
+
+
+@media screen and (max-width:1050px) {
+    .top {
+        flex-flow: column;
+    }
+    #text-input {
+        width: 50%;
+    }
+}
 
 
 
