--- a/assessment.css
+++ b/assessment.css
@@ -1,30 +1,27 @@
 body {
 background-color: lavender;
 font-family: Monospace;
-display: flexbox;
-justify-content: center;
-flex-direction: column;
 }
 
 #header {
     background-color: skyblue;
-    width: 70%;
     height: 150px;
+    width: 70%;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
 } 
    
 #logo {
-    height: 150px;
-    float: left;
+    height: 100%;
 }
 
 #h1Tag {
-    margin: auto;
     margin-bottom: 30px;
-    padding: 10px 10px 10px;
-    text-align: right;
+    padding: 10px;
+
 }
 
 #mainArea {
@@ -32,10 +29,18 @@ flex-direction: column;
     margin: 0 auto;
 }
 
+#inputBox {
+    width: 450px;
+}
+
 li {
     width: 400px;
 }
 
-#inputBox {
-    width: 450px;
-}
+/* @media only screen and (max-width: 871px) {
+ .header{
+     display:block;
+     height: auto;
+     text-align: center;
+ }
+} */
