--- a/test.css
+++ b/test.css
@@ -18,7 +18,7 @@ header{
 
 header img{ 
     /* background-image: url(https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png); */
-    position: relative;
+    /* position: relative; */
    
     width: 200px;
     height: 150px;
